--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </header>
         
     <div class="container">
-        <div class="criar-quizz escondido">
+        <div class="criar-quizz">
             <h1>Você não criou nenhum quizz ainda :(</h1>
             <div class="button">
                 <h2>Criar Quizz</h2>
             </div>
         </div>
 
-        <div class="seus-quizzes">
+        <div class="seus-quizzes escondido">
             <h1>Seus Quizzes</h1>
             <div class="quizzes">
                 <div class="quizz">
