--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     
 </head>
-<body>
+<body onload="buscarquizzes()">
     
     <header>
         <h1>BuzzQuizz</h1>
@@ -79,7 +79,7 @@
             <main>
                 <h1>Todos os Quizzes</h1>
                 <div class="quizzes">
-                    <div class="quizz">
+                    <div class="quizzestodos">
                         <div class="titulo">
                             <h2>aaaaaasssssssssssssssaaaaaaaaaAcerte os personagens corretos dos Simpsons e prove seu amor!</h2>
                         </div>
