--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <div class="seus-quizzes ">
+            <div class="seus-quizzes escondido">
                 <div class="header-seus-quizzes">
                     <h1>Seus Quizzes</h1>
                     <div class="botao" onclick="criarQuizz()">
