--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
             <main>
                 <h1>Todos os Quizzes</h1>
-                <div class="quizzes">
-                    <div class="quizzestodos">
+                <div class="quizzestodos">
+                    <div class="quizz">
                         <div class="titulo">
                             <h2>aaaaaasssssssssssssssaaaaaaaaaAcerte os personagens corretos dos Simpsons e prove seu amor!</h2>
                         </div>
