--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <header>
         <h1>BuzzQuizz</h1>
     </header>
+
+    <div class="tela-criacao-quizz-perguntas escondido">
+        oiiii
+    </div>
         
     <div class="container">
         <div class="tela-inicial-criacao-quiz escondido">
