--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 </div>
             </div>
 
-            <div class="seus-quizzes escondido">
+            <div class="seus-quizzes">
                 <div class="header-seus-quizzes">
                     <h1>Seus Quizzes</h1>
-                    <div class="botao" onclick="criarQuizz()">
+                    <div class="botao" onclick="criarOutroQuizz()">
                         <img src="images/Vector.png" />
                     </div>
                 </div>
